--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@ main img {
   width: 100%;
 }
 
+#join h2 {
+  padding-top: 20px;
+}
+
 /* ---  Groups & Items --- */
 
 .group {
@@ -88,7 +92,7 @@ header nav ul li a:hover {
 form {
   border: 2px solid #6b1a22;
   padding: 10px;
-  margin: 0 52px;
+  margin: 0 5px;
 }
 
 form label {
